[package]
name = "actix-error"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = {version = "1.0"}
actix-web = {version = "2.0.0"}
futures = { version = "0.3", features = ["compat"] }
http = {version = "0.2.0"}
serde = {version = "1.0.102"}
serde_json = {version = "1.0.44"}
tokio = {version = "0.2.6", features = ["full"]}
